# server/controllers/SMS_db/generated/ClassControllerGenerated.js
@@ -10,31 +10,32 @@
  
  * DO NOT EDIT THIS FILE!! 
  * 
- *  TO CUSTOMIZE TeacherControllerGenerated.js PLEASE EDIT ../TeacherController.js
+ *  TO CUSTOMIZE ClassControllerGenerated.js PLEASE EDIT ../ClassController.js
  * 
  *  -- THIS FILE WILL BE OVERWRITTEN ON THE NEXT SKAFFOLDER'S CODE GENERATION --
  * 
  */
 import Properties from "../../../properties";
-import TeacherModel from "../../../models/SMS_db/TeacherModel";
+import ClassModel from "../../../models/SMS_db/ClassModel";
 import ErrorManager from "../../../classes/ErrorManager";
 import { authorize } from "../../../security/SecurityManager";
-import TeacherController from "../TeacherController";
+import ClassController from "../ClassController";
 
 const generatedControllers = {
   /**
    * Init routes
    */
   init: router => {
-    const baseUrl = `${Properties.api}/teacher`;
-    router.post(baseUrl + "", authorize(["ADMIN"]), TeacherController.create);
-    router.delete(baseUrl + "/:id", authorize(["ADMIN"]), TeacherController.delete);
-    router.get(baseUrl + "/findByFirstName/:key", authorize([]), TeacherController.findByFirstName);
-    router.get(baseUrl + "/findBy_Student/:key", authorize([]), TeacherController.findBy_Student);
-    router.get(baseUrl + "/:id", authorize([]), TeacherController.get);
-    router.get(baseUrl + "/:id/get_Student", authorize([]), TeacherController.get_Student);
-    router.get(baseUrl + "", authorize([]), TeacherController.list);
-    router.post(baseUrl + "/:id", authorize(["ADMIN"]), TeacherController.update);
+    const baseUrl = `${Properties.api}/class`;
+    router.post(baseUrl + "", authorize(["ADMIN"]), ClassController.create);
+    router.delete(baseUrl + "/:id", authorize(["ADMIN"]), ClassController.delete);
+    router.get(baseUrl + "/findBy_Student/:key", authorize([]), ClassController.findBy_Student);
+    router.get(baseUrl + "/findBy_Teacher/:key", authorize([]), ClassController.findBy_Teacher);
+    router.get(baseUrl + "/:id", authorize([]), ClassController.get);
+    router.get(baseUrl + "/:id/get_Student", authorize([]), ClassController.get_Student);
+    router.get(baseUrl + "/:id/get_Teacher", authorize([]), ClassController.get_Teacher);
+    router.get(baseUrl + "", authorize([]), ClassController.list);
+    router.post(baseUrl + "/:id", authorize(["ADMIN"]), ClassController.update);
   },
 
 
@@ -42,13 +43,13 @@ const generatedControllers = {
 
 
   /**
-  * TeacherModel.create
+  * ClassModel.create
   *   @description CRUD ACTION create
   *
   */
   create: async (req, res) => {
     try {
-      const result = await TeacherModel.create(req.body);
+      const result = await ClassModel.create(req.body);
       res.json(result);
     } catch (err) {
       const safeErr = ErrorManager.getSafeError(err);
@@ -57,13 +58,14 @@ const generatedControllers = {
   },
   
   /**
-  * TeacherModel.delete
+  * ClassModel.delete
   *   @description CRUD ACTION delete
+  *   @param ObjectId id Id
   *
   */
   delete: async (req, res) => {
     try {
-      const result = await TeacherModel.delete(req.params.id);
+      const result = await ClassModel.delete(req.params.id);
       res.json(result);
     } catch (err) {
       const safeErr = ErrorManager.getSafeError(err);
@@ -72,28 +74,14 @@ const generatedControllers = {
   },
   
   /**
-  * TeacherModel.findByFirstName
-  *   @description CRUD ACTION findByFirstName
-  *
-  */
-  findByFirstName: async (req, res) => {
-    try {
-      const result = await TeacherModel.findByFirstName(req.params.key);
-      res.json(result);
-    } catch (err) {
-      const safeErr = ErrorManager.getSafeError(err);
-      res.status(safeErr.status).json(safeErr);
-    }
-  },
-  
-  /**
-  * TeacherModel.findBy_Student
+  * ClassModel.findBy_Student
   *   @description CRUD ACTION findBy_Student
+  *   @param Objectid key Id of model to search for
   *
   */
   findBy_Student: async (req, res) => {
     try {
-      const result = await TeacherModel.findBy_Student(req.params.key);
+      const result = await ClassModel.findBy_Student(req.params.key);
       res.json(result);
     } catch (err) {
       const safeErr = ErrorManager.getSafeError(err);
@@ -102,14 +90,30 @@ const generatedControllers = {
   },
   
   /**
-  * TeacherModel.get
+  * ClassModel.findBy_Teacher
+  *   @description CRUD ACTION findBy_Teacher
+  *   @param Objectid key Id of model to search for
+  *
+  */
+  findBy_Teacher: async (req, res) => {
+    try {
+      const result = await ClassModel.findBy_Teacher(req.params.key);
+      res.json(result);
+    } catch (err) {
+      const safeErr = ErrorManager.getSafeError(err);
+      res.status(safeErr.status).json(safeErr);
+    }
+  },
+  
+  /**
+  * ClassModel.get
   *   @description CRUD ACTION get
   *   @param ObjectId id Id resource
   *
   */
   get: async (req, res) => {
     try {
-      const result = await TeacherModel.get(req.params.id);
+      const result = await ClassModel.get(req.params.id);
       res.json(result);
     } catch (err) {
       const safeErr = ErrorManager.getSafeError(err);
@@ -118,13 +122,13 @@ const generatedControllers = {
   },
   
   /**
-  * TeacherModel.get_Student
+  * ClassModel.get_Student
   *   @description CRUD ACTION get_Student
   *
   */
   get_Student: async (req, res) => {
     try {
-      const result = await TeacherModel.get_Student(req.params.id);
+      const result = await ClassModel.get_Student(req.params.id);
       res.json(result);
     } catch (err) {
       const safeErr = ErrorManager.getSafeError(err);
@@ -133,13 +137,28 @@ const generatedControllers = {
   },
   
   /**
-  * TeacherModel.list
+  * ClassModel.get_Teacher
+  *   @description CRUD ACTION get_Teacher
+  *
+  */
+  get_Teacher: async (req, res) => {
+    try {
+      const result = await ClassModel.get_Teacher(req.params.id);
+      res.json(result);
+    } catch (err) {
+      const safeErr = ErrorManager.getSafeError(err);
+      res.status(safeErr.status).json(safeErr);
+    }
+  },
+  
+  /**
+  * ClassModel.list
   *   @description CRUD ACTION list
   *
   */
   list: async (req, res) => {
     try {
-      const result = await TeacherModel.list();
+      const result = await ClassModel.list();
       res.json(result);
     } catch (err) {
       const safeErr = ErrorManager.getSafeError(err);
@@ -149,14 +168,14 @@ const generatedControllers = {
   
   
   /**
-  * TeacherModel.update
+  * ClassModel.update
   *   @description CRUD ACTION update
-  *   @returns Teacher
+  *   @param ObjectId id Id
   *
   */
   update: async (req, res) => {
     try {
-      const result = await TeacherModel.update(req.body);
+      const result = await ClassModel.update(req.body);
       res.json(result);
     } catch (err) {
       const safeErr = ErrorManager.getSafeError(err);
